// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Client type differences > arc56_test: full vs minimal differences > arc56_test-client-diff 1`] = `
[
  "appClient._appSpec.scratchVariables",
  "appClient._appSpec.scratchVariables.someNumber",
  "appClient._appSpec.scratchVariables.someNumber.slot",
  "appClient._appSpec.scratchVariables.someNumber.type",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
  "appClient._appSpec.templateVariables.someNumber",
  "appClient._appSpec.templateVariables.someNumber.type",
]
`;

exports[`Client type differences > arc56_test: full vs minimal differences > arc56_test-composer-diff 1`] = `[]`;

exports[`Client type differences > duplicate_structs: full vs minimal differences > duplicate_structs-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
]
`;

exports[`Client type differences > duplicate_structs: full vs minimal differences > duplicate_structs-composer-diff 1`] = `[]`;

exports[`Client type differences > hello_world: full vs minimal differences > hello_world-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "createTransaction.delete",
  "createTransaction.delete.bare",
  "createTransaction.update",
  "createTransaction.update.bare",
  "params.delete",
  "params.delete.bare",
  "params.update",
  "params.update.bare",
  "send.delete",
  "send.delete.bare",
  "send.update",
  "send.update.bare",
]
`;

exports[`Client type differences > hello_world: full vs minimal differences > hello_world-composer-diff 1`] = `
[
  "delete",
  "delete.bare",
  "update",
  "update.bare",
]
`;

exports[`Client type differences > life_cycle: full vs minimal differences > life_cycle-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "createTransaction.delete",
  "createTransaction.delete.deleteTest",
  "createTransaction.update",
  "createTransaction.update.bare",
  "createTransaction.update.updateTest",
  "params.delete",
  "params.delete.deleteTest",
  "params.update",
  "params.update.bare",
  "params.update.updateTest",
  "send.delete",
  "send.delete.deleteTest",
  "send.update",
  "send.update.bare",
  "send.update.updateTest",
]
`;

exports[`Client type differences > life_cycle: full vs minimal differences > life_cycle-composer-diff 1`] = `
[
  "delete",
  "delete.deleteTest",
  "update",
  "update.bare",
  "update.updateTest",
]
`;

exports[`Client type differences > minimal: full vs minimal differences > minimal-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "createTransaction.delete",
  "createTransaction.delete.bare",
  "createTransaction.update",
  "createTransaction.update.bare",
  "params.delete",
  "params.delete.bare",
  "params.update",
  "params.update.bare",
  "send.delete",
  "send.delete.bare",
  "send.update",
  "send.update.bare",
]
`;

exports[`Client type differences > minimal: full vs minimal differences > minimal-composer-diff 1`] = `
[
  "delete",
  "delete.bare",
  "update",
  "update.bare",
]
`;

exports[`Client type differences > nested: full vs minimal differences > nested-client-diff 1`] = `
[
  "appClient._appSpec.byteCode",
  "appClient._appSpec.byteCode.approval",
  "appClient._appSpec.byteCode.clear",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
]
`;

exports[`Client type differences > nested: full vs minimal differences > nested-composer-diff 1`] = `[]`;

exports[`Client type differences > nfd: full vs minimal differences > nfd-client-diff 1`] = `
[
  "appClient._appSpec.scratchVariables",
  "appClient._appSpec.scratchVariables.adminAsaId",
  "appClient._appSpec.scratchVariables.adminAsaId.slot",
  "appClient._appSpec.scratchVariables.adminAsaId.type",
  "appClient._appSpec.scratchVariables.registryAppId",
  "appClient._appSpec.scratchVariables.registryAppId.slot",
  "appClient._appSpec.scratchVariables.registryAppId.type",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
  "appClient._appSpec.templateVariables.adminAsaId",
  "appClient._appSpec.templateVariables.adminAsaId.type",
  "appClient._appSpec.templateVariables.registryAppId",
  "appClient._appSpec.templateVariables.registryAppId.type",
  "createTransaction.update",
  "createTransaction.update.updateApplication",
  "params.update",
  "params.update.updateApplication",
  "send.update",
  "send.update.updateApplication",
]
`;

exports[`Client type differences > nfd: full vs minimal differences > nfd-composer-diff 1`] = `
[
  "update",
  "update.updateApplication",
]
`;

exports[`Client type differences > reti: full vs minimal differences > reti-client-diff 1`] = `
[
  "appClient._appSpec.scratchVariables",
  "appClient._appSpec.scratchVariables.nfdRegistryAppId",
  "appClient._appSpec.scratchVariables.nfdRegistryAppId.slot",
  "appClient._appSpec.scratchVariables.nfdRegistryAppId.type",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
  "appClient._appSpec.templateVariables.nfdRegistryAppId",
  "appClient._appSpec.templateVariables.nfdRegistryAppId.type",
]
`;

exports[`Client type differences > reti: full vs minimal differences > reti-composer-diff 1`] = `[]`;

exports[`Client type differences > state: full vs minimal differences > state-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "createTransaction.delete",
  "createTransaction.delete.bare",
  "createTransaction.delete.deleteAbi",
  "createTransaction.update",
  "createTransaction.update.bare",
  "createTransaction.update.updateAbi",
  "params.delete",
  "params.delete.bare",
  "params.delete.deleteAbi",
  "params.update",
  "params.update.bare",
  "params.update.updateAbi",
  "send.delete",
  "send.delete.bare",
  "send.delete.deleteAbi",
  "send.update",
  "send.update.bare",
  "send.update.updateAbi",
]
`;

exports[`Client type differences > state: full vs minimal differences > state-composer-diff 1`] = `
[
  "delete",
  "delete.bare",
  "delete.deleteAbi",
  "update",
  "update.bare",
  "update.updateAbi",
]
`;

exports[`Client type differences > structs: full vs minimal differences > structs-client-diff 1`] = `
[
  "appClient._appSpec.byteCode",
  "appClient._appSpec.byteCode.approval",
  "appClient._appSpec.byteCode.clear",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
]
`;

exports[`Client type differences > structs: full vs minimal differences > structs-composer-diff 1`] = `[]`;

exports[`Client type differences > void: full vs minimal differences > void-client-diff 1`] = `
[
  "appClient._appSpec.byteCode",
  "appClient._appSpec.byteCode.approval",
  "appClient._appSpec.byteCode.clear",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
  "appClient._appSpec.templateVariables.DELETABLE",
  "appClient._appSpec.templateVariables.DELETABLE.type",
  "appClient._appSpec.templateVariables.UPDATABLE",
  "appClient._appSpec.templateVariables.UPDATABLE.type",
  "createTransaction.delete",
  "createTransaction.delete.bare",
  "createTransaction.update",
  "createTransaction.update.bare",
  "params.delete",
  "params.delete.bare",
  "params.update",
  "params.update.bare",
  "send.delete",
  "send.delete.bare",
  "send.update",
  "send.update.bare",
]
`;

exports[`Client type differences > void: full vs minimal differences > void-composer-diff 1`] = `
[
  "delete",
  "delete.bare",
  "update",
  "update.bare",
]
`;

exports[`Client type differences > voting_round: full vs minimal differences > voting_round-client-diff 1`] = `
[
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "createTransaction.delete",
  "createTransaction.delete.bare",
  "params.delete",
  "params.delete.bare",
  "send.delete",
  "send.delete.bare",
]
`;

exports[`Client type differences > voting_round: full vs minimal differences > voting_round-composer-diff 1`] = `
[
  "delete",
  "delete.bare",
]
`;

exports[`Client type differences > zero_coupon_bond: full vs minimal differences > zero_coupon_bond-client-diff 1`] = `
[
  "appClient._appSpec.byteCode",
  "appClient._appSpec.byteCode.approval",
  "appClient._appSpec.byteCode.clear",
  "appClient._appSpec.source",
  "appClient._appSpec.source.approval",
  "appClient._appSpec.source.clear",
  "appClient._appSpec.templateVariables",
  "createTransaction.update",
  "createTransaction.update.bare",
  "params.update",
  "params.update.bare",
  "send.update",
  "send.update.bare",
]
`;

exports[`Client type differences > zero_coupon_bond: full vs minimal differences > zero_coupon_bond-composer-diff 1`] = `
[
  "update",
  "update.bare",
]
`;
